# risex-cli

./: Cargo.toml  README.md  dist-workspace.toml
docs/superpowers/plans/: 2026-06-20-risex-cli-phase1-foundation.md  2026-06-21-browser-auth-bridge.md  2026-06-21-risex-cli-phase2-trading.md
docs/superpowers/specs/: 2026-06-20-risex-cli-design.md  2026-06-21-browser-auth-bridge-design.md
src/: bridge.rs  client.rs  config.rs  errors.rs  lib.rs  main.rs  network.rs  session.rs  signing.rs  telemetry.rs
src/commands/: auth.rs  helpers.rs  market.rs  mod.rs  trade.rs
src/output/: json.rs  mod.rs  table.rs
tests/: auth_client.rs  auth_cmd.rs  bridge.rs  cli.rs  connect_cmd.rs  integration.rs  market.rs  order_cmd.rs  rest_client.rs  trading_flow.rs
web/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  main.tsx  sign.ts  wagmi.ts
